# nictichu-cli

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVGUIDE.md  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  TEST_REPORT.md  install.bat  install.sh  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.sh
config/: settings.yaml
src/: __init__.py  main.py
src/cli/: __init__.py  commands.py  conversation.py  interface.py
src/core/: __init__.py  context.py  core.py
src/mcps/: __init__.py  client.py  manager.py
src/mcps/servers/: __init__.py  filesystem.py  memory.py  search.py  shell.py
src/models/: __init__.py  base.py  google_ai.py  ollama.py  registry.py  vertex_ai.py
src/tools/: __init__.py  docs.py  editor.py  reviewer.py  tester.py
src/utils/: config.py  logger.py
tests/: __init__.py  conftest.py  test_integration.py  test_performance.py
tests/test_cli/: __init__.py  test_full_integration.py  test_integration.py
tests/test_mcps/: test_filesystem.py  test_manager.py
tests/test_models/: test_registry.py
tests/test_tools/: __init__.py  test_editor.py  test_reviewer.py
